--- a/ansible/roles/configure_ttrss/templates/ttrss_feed_updater.service.j2
+++ b/ansible/roles/configure_ttrss/templates/ttrss_feed_updater.service.j2
@@ -4,7 +4,7 @@ After=network.target mysql.service
 
 [Service]
 User=nginx
-ExecStart={{ rss_hostname }}/update_daemon2.php
+ExecStart=/srv/{{ rss_hostname }}/update_daemon2.php
 
 [Install]
 WantedBy=multi-user.target
